Added README.md and .gitignore.  Also updated index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Begin PageContent -->
     <main id="pagecontent">
       <div class="container">
-        <h1>Michael Valenzuelaz</h1>
+        <h1>Michael Valenzuela</h1>
         <h2>Portfolio</h2>
         <blockquote>&quot;&quot; -</blockquote>
         <p></p>
@@ -102,7 +102,7 @@
           |<a href="https://color.adobe.com/">Adobe color </a> |
           <a href="https://www.aeries.com/">Aeries</a> |
           <a href="https://classroom.google.com">Classroom</a> |
-          <a href="https://minga.io/">Minga</a> | Terminal|
+          <a href="https://minga.io/"> </a> | Terminal|
           <a href="GitAndGitHub/git.html">Git</a>|
         </nav>
       </div>
