Updated index with AI links

--- a/index.html
+++ b/index.html
@@ -109,6 +109,23 @@
     </section>
     <!-- End PageFooter -->
 
+    <!-- Begin AI Footer -->
+    <section id="aifooter">
+      <div class="container">
+        <nav>
+          <a href="https://firefly.adobe.com/">Firefly | </a>
+          <a href="https://suno.com/home">Suno | </a>
+          <a href="https://chatgpt.com/">ChatGPT | </a>
+          <a href="https://gemini.google.com/app">Gemini | </a>
+          <a href="https://copilot.microsoft.com/">Copilot | </a>
+          <a href="https://claude.ai/login?from=logout">Claude | </a>
+          <a href="https://www.perplexity.ai/">perplexity |</a>
+          <a href="https://notebooklm.google.com/">NotebookLM |</a>
+        </nav>
+      </div>
+    </section>
+    <!-- End Ai Footer -->
+
     <!-- Begin SubFooter -->
     <section id="subfooter">
       <div class="container">
