Added git hub to index.html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
           <a href="https://www.aeries.com/">Aeries</a> |
           <a href="https://classroom.google.com">Classroom</a> |
           <a href="https://minga.io/"> </a> | Terminal|
-          <a href="GitAndGitHub/git.html">Git</a>|
+          <a href="GitAndGitHub/git.html">Git</a> |
+          <a href="https://github.com/">Github</a>
         </nav>
       </div>
     </section>
