Updated navigation on portfolio

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <header id="pageheader">
       <div class="container">
         <div id="logo"></div>
+        <nav id="topnav">
+          <ul>
+            <li><a href="#home">Home </a></li>
+            <li><a href="#career">Career</a></li>
+            <li><a href="#semester1">Semester1 </a></li>
 
-        <nav>
-          <a href="#home">Home </a>| <a href="#career">Career</a> |
-          <a href="#semester1">Semester1 </a>|
-          <!-- TODO; uncomment when we hit semester 2 <a href="#semester2">Semester2</a> | -->
-          <a href="#worksamples">Work Samples</a> |
-          <a href="#certificates">Certificates</a>
+            <li><a href="#worksamples">Work Samples</a></li>
+            <li><a href="#certificates">Certificates</a></li>
+          </ul>
         </nav>
       </div>
     </header>
