Updated Nav With Ai Tools and smester 2 links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#home">Home </a></li>
             <li><a href="#career">Career</a></li>
             <li><a href="#semester1">Semester1 </a></li>
-
+            <li><a href="#aifooter">Ai Tools</a></li>
             <li><a href="#worksamples">Work Samples</a></li>
             <li><a href="#certificates">Certificates</a></li>
           </ul>
@@ -84,7 +84,7 @@
     </section>
     <!-- End Semester1 -->
 
-    <!-- TODO uncomment when we hit semester 2 <section id="semester2">
+
       <div class="container">
         <h2>Semester 2</h2>
         <ul>
@@ -92,7 +92,7 @@
           <li>Assignment 2</li>
         </ul>
       </div>
-    </section> -->
+    </section> 
 
     <!-- End Semester2 -->
 
